# Meridian

./: .env.example  .gitignore  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  Makefile  NOTICE  README.md  REPRODUCIBILITY.md  SECURITY.md  docker-compose.yml  pyproject.toml
.github/workflows/: evals.yml
api/: __init__.py  server.py
baselines/: deepseek_baseline.json  gpt2_baseline.json
certifications/: deepseek_chat_20251230.json  mistral_mistral_medium_latest_20251230.json  openai_gpt4_20251230.json
core/: __init__.py  cli.py  config.py  judge.py  runner.py  streaming.py  types.py  utils.py
core/consistency/: __init__.py  cluster.py  normalize.py  similarity.py
core/explain/: __init__.py  activation_patching_demo.py  attention_viz.py  causal_tracing.py  logit_attribution.py  logit_lens.py  residual_decomp.py
core/model_adapters/: __init__.py  anthropic_api.py  base.py  seq2seq.py  together.py
core/reliability/: determinism.py
core/scoring/: __init__.py  abstain_policy.py  calibration.py  length_constraints.py  reward_hacking.py  self_consistency.py
core/stats/: __init__.py
core/storage/: __init__.py  db.py
core/telemetry/: __init__.py  redaction.py
core/verify/: __init__.py  grounding_score.py
docs/: CERTIFICATION.md  FAILURE_EXAMPLES.md  GITHUB_ISSUES_ROADMAP.md  METHODOLOGY.md  PROVIDERS.md  THREAT_MODEL.md  USE_CASES.md  custom_suites.md  one_pager.md  whitepaper.md
examples/: ci_regression_gate.yml  eval_openai_prompt_pack.py  eval_rag_policy_pack.py
golden_runs/2025-12-28_deepseek_chat/: README.md  run_id.txt  summary.json
golden_runs/2025-12-30_attested/: README.md
golden_runs/2025-12-30_gpt4/: README.md
golden_runs/2025-12-30_mistral/: README.md
meridian/: __init__.py  cli.py  config.py  judge.py  runner.py  streaming.py  types.py  utils.py
meridian/certification/: __init__.py  badge.py  suite_badge.py  tests.py
meridian/explain/: __init__.py
meridian/model_adapters/: __init__.py  base.py  deepseek_api.py  groq_adapter.py  mistral.py  (+2 more)
reports/: __init__.py  build_report.py  run_20251229_095854_a3d6c6d4.html
scripts/: demo_golden_run.ps1  demo_golden_run.sh  make_demo_data.py  quickstart.sh  show_results.py
suite_certifications/: rag_evaluation_deepseek_chat_82b5835d.json
suites/: DATASET_CARD.md  _template.jsonl  business_analysis.jsonl  circuiteval_core_50.jsonl  code_analysis.jsonl  consistency.jsonl  document_processing.jsonl  edge_cases.jsonl  enterprise_prompts.jsonl  hallucination_control.jsonl  imo_generation_quality.jsonl  instruction_following.jsonl  math_short.jsonl  multi_step_reasoning.jsonl  needle_haystack.jsonl  rag_evaluation.jsonl  reward_hacking.jsonl  robustness_noise.jsonl  security_adversarial.jsonl
tests/: test_core.py
ui/: app.py  layout.py  vega_theme.py
(+34 files in other folders)
